  * Typing without any completion matches
  * General keyboard handling
  * Scrolling
- `:version` now shows details about the loaded autoconfig.yml/config.py.
- Hosts are now additionally looked up including their ports in netrc files.
- With Qt 5.10 or newer, qutebrowser now doesn't force software rendering with
  Nouveau drivers anymore. However, QtWebEngine/Chromium still do so.

Fixed
~~~~~

- `:config-write-py` now correctly writes `config.unbind(...)` lines (instead
  of `config.bind(..., None)`) when unbinding a default keybinding.
- Prevent repeat keyup events for JavaScript when a key is held down.
- The Makefile now rebuilds the manpage correctly.
- `~/.config/qutebrowser/blocked-hosts` can now also contain /etc/hosts-like
  lines, not just simple hostnames.
- Restored compatibility with Jinja2 2.8 (e.g. used on Debian Stretch or Ubuntu
  16.04 LTS).
- Fixed implicit type conversion warning with Python 3.8.
- The desktop file now sets `StartupWMClass` correctly, so the qutebrowser icon
  is no longer shown twice in the Gnome dock when pinned.
- Bindings involving keys which need the AltGr key now work properly.
- Fixed crash (caused by a Qt bug) when typing characters above the Unicode BMP
  (such as certain emoji or CJK characters).
- `dictcli.py` now works properly again.
- Shift can now be used while typing hint keystrings, which e.g. allows typing
  number hints on French keyboards.
- With rapid hinting in number mode, backspace now edits the filter text after
  following a hint.

Removed
~~~~~~~

- At least Python 3.5.2 is now required to run qutebrowser, support for 3.5.0
  and 3.5.1 was dropped.


v1.7.1 (unreleased)
-------------------

Fixed
~~~~~

- Crash when showing a permission request in certain scenarios.

v1.7.0 (2019-07-18)
-------------------

Added
~~~~~

- New settings:
  * `colors.tabs.pinned.*` to control colors of pinned tabs.
  * `hints.leave_on_load` which allows disabling leaving of hint mode when a
    new page is loaded.